// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat CRUD entity 1`] = `
{
  "Items": [
    {
      "description": "Test Item description",
      "endAt": "2024-12-31T12:00:00.000Z",
      "name": "Test-Item-1",
      "startAt": "2024-01-01T12:00:00.000Z",
    },
  ],
  "country": "de",
  "currency": "EUR",
  "description": "Test description",
  "name": "Test",
  "price": 44.44,
  "stock": 11,
}
`;

exports[`Chat CRUD entity 2`] = `{}`;

exports[`Chat CRUD entity 3`] = `
{
  "country": "de",
  "createdBy": "alice",
  "currency": "EUR",
  "description": "Test description",
  "modifiedBy": "alice",
  "name": "Test",
  "price": 44.44,
  "stock": 11,
}
`;

exports[`Chat CRUD entity 4`] = `
{
  "Items": [
    {
      "description": "Test Item description",
      "endAt": "2024-12-31T12:00:00.000Z",
      "name": "Test-Item-1",
      "startAt": "2024-01-01T12:00:00.000Z",
    },
  ],
  "country": "de",
  "createdBy": "alice",
  "currency": "EUR",
  "description": "Test description",
  "modifiedBy": "alice",
  "name": "Test",
  "price": 44.44,
  "stock": 11,
}
`;

exports[`Chat CRUD entity 5`] = `
{
  "Items": [
    {
      "description": "Test Item description - updated",
      "endAt": "2024-12-31T12:00:00.000Z",
      "name": "Test-Item-1",
      "startAt": "2024-01-01T12:00:00.000Z",
    },
  ],
  "country": "de",
  "currency": "EUR",
  "description": "Test description - updated",
  "name": "Test",
  "price": 44.44,
  "stock": 11,
}
`;

exports[`Chat CRUD entity 6`] = `{}`;

exports[`Chat CRUD entity 7`] = `{}`;

exports[`Chat CRUD entity 8`] = `{}`;

exports[`Chat CRUD entity 9`] = `
[
  {
    "country": "Switzerland",
    "createdBy": "anonymous",
    "currency": "CHF",
    "description": "This is a test Header",
    "modifiedBy": "anonymous",
    "name": "Header",
    "price": 12.34,
    "stock": 11,
  },
]
`;
